--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
 <style>
-/* global */
 * { box-sizing:border-box; }
 html,body { height:100%; margin:0; }
 body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel,
@@ -37,7 +36,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   border-radius: 12px;
 }
 
-/* Intro overlay - center panel */
+/* Intro overlay */
 #overlay {
   position: fixed;
   inset: 0;
@@ -47,28 +46,24 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 }
 #overlay[aria-hidden="true"] { display:none; }
 #overlay-content {
-  width:auto; min-width:300px; max-width:480px;
-  height:auto; min-height:350px; max-height:600px;
   background: rgba(255,255,255,0.18);
   backdrop-filter: blur(10px);
-  padding:28px;
   border-radius:18px;
   color:#fff;
-  font-size:1.05rem;
-  line-height:1.4;
-  pointer-events:auto;
-  display:flex; flex-direction:column; justify-content:center; align-items:center;
-  text-align:center;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  padding:16px;
+  max-width:45vw;
+  width:auto;
+  max-height:60vh;
 }
-#overlay-content p { margin:0 0 10px 0; color:#fff; }
-
-/* Instructions */
-#instructions-line { text-decoration:underline; font-weight:700; margin-top:6px; color:#fff; }
-#instructions-list { text-align:center; margin-top:8px; max-width:420px; line-height:1.6em; color:#fff; }
-#instructions-list p { margin:6px 0 0 0; }
-
-/* Dismiss message line (small, off-gray) */
-#dismiss-message { margin-top:16px; font-size:0.95rem; color:#d0d0d0; text-align:center; }
+#overlay-content p { margin:6px 0; text-align:center; }
+#instructions-line { text-decoration:underline; font-weight:700; margin:12px 0 6px 0; }
+#instructions-list { text-align:center; margin-top:8px; line-height:1.6em; }
+#instructions-list p { margin:4px 0; }
+#dismiss-message { margin-top:16px; font-size:0.95rem; color:#d0d0d0; }
 
 /* tooltip preview */
 #tooltip-preview {
@@ -81,7 +76,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   padding:10px;
   border-radius:10px;
   z-index:9999;
-  pointer-events:auto; 
+  pointer-events:auto;
   font-size:0.85rem;
   line-height:1.2;
   box-shadow: 0 6px 18px rgba(0,0,0,0.6);
@@ -99,16 +94,14 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   border-radius:14px;
   color:#fff;
   font-size:0.98rem;
-  text-align:center;
   max-width:82%;
   z-index:20;
   display:none;
 }
 
-/* 360 video panel */
+/* 360 video panel - dynamic placement */
 #video-link-panel {
-  position: fixed;
-  top: calc(18px + 72px + 16px);
+  position: absolute; /* will be dynamically positioned */
   left:50%;
   transform:translateX(-50%);
   background: rgba(0,0,0,0.20);
@@ -147,7 +140,7 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
   border-radius:16px; padding:16px;
   display:flex; flex-direction:column; align-items:center; justify-content:center;
 }
-#qr-content img { height: 30vh; object-fit:contain; border-radius:8px; }
+#qr-content img { width:20vw; max-width:200px; border-radius:8px; }
 #qr-content p { color:#d0d0d0; margin-top:12px; font-size:0.95rem; text-align:center; }
 
 /* QR and VR buttons */
@@ -165,12 +158,13 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 
 <div id="panorama"></div>
 
+<!-- Intro overlay -->
 <div id="overlay" role="dialog" aria-modal="true">
   <div id="overlay-content" role="document">
     <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
-    <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; cursor:pointer; color:#bfe;">here</span>.</p>
+    <p>If you would like to see my other work click <span id="preview-link" style="text-decoration:underline; color:#bfe; cursor:pointer;">here</span>.</p>
 
-    <div style="height:8px;"></div>
+    <div style="height:12px;"></div>
 
     <div id="instructions-line">Instructions</div>
     <div id="instructions-list">
@@ -179,38 +173,46 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
       <p>• Use fullscreen button for best experience.</p>
     </div>
 
-    <br><br>
+    <div style="height:12px;"></div>
+
     <div id="dismiss-message">Click Anywhere to Dismiss this Message</div>
   </div>
 </div>
 
+<!-- Tooltip preview -->
 <div id="tooltip-preview" role="tooltip" aria-hidden="true">
   <img src="https://i.imgur.com/eKxOrcZ.jpeg" alt="preview">
   <div style="font-size:0.9rem;"><a id="tooltip-link" href="https://linktr.ee/lexofdystopia" target="_blank" rel="noopener">https://linktr.ee/lexofdystopia</a></div>
 </div>
 
+<!-- Manhattan Beach panel -->
 <div id="hotspot-panel" aria-hidden="true">
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
   The Ritz-Carlton can be seen on the distant cliffs.<br>
   The coastal shores are lined with miles of golf courses.
 </div>
 
+<!-- 360 video link panel -->
 <div id="video-link-panel" aria-hidden="true">
   <span id="manhattan-video-text" style="text-decoration:underline; color:#9fd6ff;">Click Here to Watch a 360 Video of this Location</span>
 </div>
 
+<!-- license bar -->
 <div id="license-bar">Loading license...</div>
 
+<!-- QR and VR buttons -->
 <button id="top-qr-button" aria-controls="qr-overlay" aria-expanded="false">QR</button>
 <button id="vr-button" aria-hidden="true">VR</button>
 
+<!-- youtube overlay -->
 <div id="youtube-overlay" aria-hidden="true">
   <div id="youtube-content">
-    <iframe id="youtube-frame" allowfullscreen referrerpolicy="no-referrer" allow="autoplay; fullscreen"></iframe>
+    <iframe id="youtube-frame" allowfullscreen referrerpolicy="no-referrer"></iframe>
     <p style="color:#d0d0d0; margin-top:10px; font-size:0.95rem;">Click Anywhere to Dismiss this Video</p>
   </div>
 </div>
 
+<!-- qr overlay -->
 <div id="qr-overlay" aria-hidden="true">
   <div id="qr-content">
     <img src="VRQR.png" alt="QR code">
@@ -219,9 +221,9 @@ body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relat
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
+
 <script>
 const panoURL = "https://i.imgur.com/FYdmUI3.jpeg";
-
 const viewer = pannellum.viewer('panorama', {
   type: 'equirectangular',
   panorama: panoURL,
@@ -247,52 +249,90 @@ const youtubeOverlay = document.getElementById('youtube-overlay');
 const youtubeFrame = document.getElementById('youtube-frame');
 const licenseBar = document.getElementById('license-bar');
 
-/* Overlay dismissal */
-document.body.addEventListener('click',(e)=>{
-  if(!e.target.closest('#overlay-content') && e.target!==previewLink){
-    overlay.setAttribute('aria-hidden','true'); overlay.style.display='none';
-    hotspotPanel.style.display='block'; videoLinkPanel.style.display='block';
-  }
+/* Overlay dismissal: anywhere except hyperlink */
+overlay.addEventListener('click', (e)=>{
+  if(e.target.closest('#preview-link')) return;
+  overlay.setAttribute('aria-hidden','true');
+  overlay.style.display='none';
+  hotspotPanel.style.display='block';
+  videoLinkPanel.style.display='block';
+  hotspotPanel.classList.add('pulse-white');
+  setTimeout(()=>hotspotPanel.classList.remove('pulse-white'),2000);
+  updateVideoPanelPosition();
+  detectVRHeadset().then(info=>{
+    if(info){ vrBtn.style.display='block'; vrBtn.setAttribute('aria-hidden','false'); }
+  });
 });
-previewLink.addEventListener('click', (e)=>{ e.stopPropagation(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
 
-/* Tooltip */
-function showTooltip() {
-  tooltip.style.display='block'; tooltip.setAttribute('aria-hidden','false');
+/* LICENSE */
+fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(text=>licenseBar.textContent=text).catch(()=>licenseBar.textContent='LICENSE file not found.');
+
+/* Tooltip hover */
+function showTooltip(){
+  tooltip.style.display='block';
+  tooltip.setAttribute('aria-hidden','false');
   const rect = previewLink.getBoundingClientRect();
-  const ttWidth = tooltip.offsetWidth, ttHeight = tooltip.offsetHeight;
-  let top = rect.top-ttHeight-10;
+  const ttWidth = tooltip.offsetWidth;
+  const ttHeight = tooltip.offsetHeight;
+  let top = rect.top - ttHeight - 10;
   let left = rect.left + rect.width/2 - ttWidth/2;
   if(top<8) top=rect.bottom+10;
   if(left<8) left=8;
   if(left+ttWidth>window.innerWidth-8) left=window.innerWidth-ttWidth-8;
-  tooltip.style.left=Math.round(left)+'px'; tooltip.style.top=Math.round(top)+'px';
+  tooltip.style.left=Math.round(left)+'px';
+  tooltip.style.top=Math.round(top)+'px';
 }
-previewLink.addEventListener('mouseenter',showTooltip);
-previewLink.addEventListener('mouseleave',()=>{ setTimeout(()=>{if(!tooltip.matches(':hover')&&!previewLink.matches(':hover')){tooltip.style.display='none';tooltip.setAttribute('aria-hidden','true');}},80); });
-tooltip.addEventListener('mouseenter',showTooltip);
-tooltip.addEventListener('mouseleave',()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
-tooltipLink.addEventListener('click',(e)=> e.stopPropagation());
 
-/* 360 Video */
-videoLinkPanel.addEventListener('click',(e)=>{
-  e.stopPropagation(); youtubeFrame.src='';
-  setTimeout(()=>{
-    youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
-    youtubeFrame.setAttribute('allow','autoplay; fullscreen');
-    youtubeOverlay.style.display='flex';
-    requestAnimationFrame(()=>youtubeOverlay.style.opacity=1);
-  },0);
+previewLink.addEventListener('mouseenter', showTooltip);
+previewLink.addEventListener('mouseleave', ()=>{ setTimeout(()=>{ if(!tooltip.matches(':hover')){ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); } },80); });
+tooltip.addEventListener('mouseenter', showTooltip);
+tooltip.addEventListener('mouseleave', ()=>{ tooltip.style.display='none'; tooltip.setAttribute('aria-hidden','true'); });
+previewLink.addEventListener('click', e=>{ e.stopPropagation(); window.open('https://linktr.ee/lexofdystopia','_blank','noopener'); });
+tooltipLink.addEventListener('click', e=>e.stopPropagation());
+
+/* 360 video panel */
+videoLinkPanel.addEventListener('click', e=>{
+  e.stopPropagation();
+  youtubeFrame.src = "https://www.youtube.com/embed/sfYM1-_WbWk?rel=0&autoplay=1";
+  youtubeOverlay.style.display='flex';
+  requestAnimationFrame(()=> youtubeOverlay.style.opacity=1);
 });
-youtubeOverlay.addEventListener('click',()=>{ youtubeOverlay.style.opacity=0; setTimeout(()=>{youtubeOverlay.style.display='none'; youtubeFrame.src='';},280); });
+youtubeOverlay.addEventListener('click', ()=>{ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280); });
 
-/* QR Overlay */
-qrBtn.addEventListener('click',(e)=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=>qrOverlay.style.opacity=1); });
-qrOverlay.addEventListener('click',()=>{ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',280); });
+/* QR overlay */
+qrBtn.addEventListener('click', e=>{ e.stopPropagation(); qrOverlay.style.display='flex'; requestAnimationFrame(()=>qrOverlay.style.opacity=1); });
+qrOverlay.addEventListener('click', ()=>{ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',300); });
 qrContent.addEventListener('click', e=>e.stopPropagation());
 
-/* LICENSE */
-fetch('LICENSE').then(r=>r.ok?r.text():Promise.reject('no')).then(t=>licenseBar.textContent=t).catch(()=>{licenseBar.textContent='LICENSE file not found.';});
+/* VR detection */
+async function detectVRHeadset(){
+  if(navigator.xr && navigator.xr.isSessionSupported){
+    try{ const supported=await navigator.xr.isSessionSupported('immersive-vr'); if(supported) return {manufacturer:'WebXR', model:'immersive-vr'}; }catch{}
+  }
+  const ua=navigator.userAgent||''; 
+  if(/OculusBrowser|Oculus|Quest|Meta Quest/i.test(ua)) return {manufacturer:'Oculus', model:'Quest'};
+  return null;
+}
+
+/* VR button */
+vrBtn.addEventListener('click', e=>{ e.stopPropagation(); const w=window.open('vr.html','_blank','noopener'); if(!w) alert('Popup blocked. Allow popups.'); });
+
+/* Keyboard ESC */
+document.addEventListener('keydown', e=>{
+  if(e.key==='Escape'){
+    if(youtubeOverlay.style.display==='flex'){ youtubeOverlay.style.opacity=0; setTimeout(()=>{ youtubeOverlay.style.display='none'; youtubeFrame.src=''; },280);}
+    if(qrOverlay.style.display==='flex'){ qrOverlay.style.opacity=0; setTimeout(()=>qrOverlay.style.display='none',280);}
+  }
+});
+
+/* === dynamic 360 video panel positioning === */
+function updateVideoPanelPosition(){
+  const rect = hotspotPanel.getBoundingClientRect();
+  videoLinkPanel.style.top = (rect.bottom + 12) + 'px';
+  videoLinkPanel.style.left = '50%';
+  videoLinkPanel.style.transform = 'translateX(-50%)';
+}
+window.addEventListener('resize', updateVideoPanelPosition);
 </script>
 </body>
 </html>
